--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "npm run tailwind && craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tailwind": "tailwind build src/styles/index.css -o src/styles/tailwind.css"
+
   },
   "eslintConfig": {
     "extends": [
