--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^17.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -24,7 +26,6 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "tailwind": "tailwind build src/styles/index.css -o src/styles/tailwind.css"
-
   },
   "eslintConfig": {
     "extends": [
